force-app/main/default/objects/Account/fields/TestDevOps1__c.field-meta.xml
<CustomField>
    <fullName>TestDevOps1__c</fullName>
    <label>TestDevOps1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>