force-app/main/default/objects/Account/fields/TestDevOps2__c.field-meta.xml
<CustomField>
    <fullName>TestDevOps2__c</fullName>
    <label>TestDevOps2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>