force-app/main/default/objects/Account/fields/TestDevOps3__c.field-meta.xml
<CustomField>
    <fullName>TestDevOps3__c</fullName>
    <label>TestDevOps3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>