force-app/main/default/objects/Account/recordTypes/Entities.recordType-meta.xml
<RecordType>
    <fullName>Entities</fullName>
    <active>true</active>
    <label>Entities</label>
</RecordType>